# study_async

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.txt  compose.yml  pyproject.toml  requirements.txt
app/: manage.py  requirements.txt
app/books/: models.py
app/books/migrations/: 0002_book_tags_alter_book_title.py
app/challenges/: admin.py  urls.py
app/challenges/migrations/: 0003_alter_flashcardchallenge_got_it_right.py
app/challenges/templates/: base.html  challenge.html
app/core/: asgi.py  urls.py
app/core/settings/: base.py  prod.py
app/flashcards/: models.py  urls.py  views.py
app/flashcards/templates/: base.html
app/reports/: urls.py  views.py
app/users/: urls.py
app/users/templates/: login_user.html
backend/: db.sqlite3
backend/books/: admin.py  models.py  urls.py  views.py
backend/books/migrations/: 0001_initial.py  0002_book_tags_alter_book_title.py  0003_viewbook.py  0004_remove_book_tags_book_tags.py  0005_tag_alter_book_tags.py
backend/books/templates/: create_book.html
backend/challenges/: models.py  urls.py  views.py
backend/challenges/migrations/: 0001_initial.py  0002_alter_flashcardchallenge_got_it_right.py  0003_alter_flashcardchallenge_got_it_right.py
backend/challenges/templates/: challenge.html  list_challengs.html  new_challenge.html
backend/core/: settings.py  urls.py
backend/flashcards/: admin.py  urls.py  views.py
backend/flashcards/migrations/: 0001_initial.py
backend/flashcards/templates/: new_flashcard.html
backend/reports/: views.py
backend/templates/partials/: header.html
backend/templates/static/challenges/css/: challenge.css
backend/users/: urls.py  views.py
backend/users/templates/: create_user.html  login_user.html
base_static/challenges/css/: start_challenge.css
base_static/flashcards/js/: flashcard.js
base_static/global/css/: base.css
base_static/users/css/: create_user.css
base_templates/global/partials/: header.html
books/: urls.py
books/migrations/: 0005_tag_alter_book_tags.py  0006_alter_book_file.py
books/templates/: book.html  create_book.html
challenges/: models.py  views.py
challenges/migrations/: 0001_initial.py
challenges/templates/: challenge.html  list_challengs.html  new_challenge.html
core/: wsgi.py
core/settings/: base.py  dev.py  prod.py
dotenv_files/: .env-example
flashcards/: views.py
flashcards/migrations/: 0001_initial.py
flashcards/templates/: new_flashcard.html
reports/: views.py
reports/templates/: report.html
scripts/: collectstatic.sh  commands.sh  makemigrations.sh  migrate.sh  runserver.sh
static/flashcards/css/: create_flashcard.css
users/: views.py
users/templates/: base.html  create_user.html
