[tool.poetry]
name = "study_async"
version = "0.1.0"
description = ""
authors = ["mateus-dev-me <mateusmartinsipu2@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "study_async"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
pillow = "^10.2.0"
django-environ = "^0.12.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
django-extensions = "^3.2.3"
ruff = "^0.9.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^6.0.0"
pytest-django = "^4.9.0"
faker = "^33.3.1"
factory-boy = "^3.3.1"

[tool.pytest.ini_options]
pythonpath = "."
python_files = ["test_*.py", "*_test.py"]
addposts = "-p no:warning"

[tool.coverage.run]
omit = [
    "__init__.py",
    "manage.py",
    "**/config/*",
    "**/migrations/*",
    "conftest.py",
    "**/_tests/*",
]

[tool.ruff]
extend-exclude = [
  ".venv",
  "migrations",
  "core",
  "manage.py",
  ".ruff_cache",
  "_tests",
]
line-length = 79
indent-width = 4

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
docstring-code-format = true

[tool.taskipy.tasks]
pre_run = "python manage.py migrate"
run = "python manage.py runserver"

pre_test = "task lint"
test = "pytest --cov=. -vv"
post_test = "coverage html"

lint = "ruff check . && ruff check . --diff"
format= "ruff check . --fix && ruff format ."

pre_reset_db = "python manage.py clean_pyc"
reset_db = "python manage.py reset_db"

shell = "python manage.py shell_plus"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
